# keyvalue-component-model-demo

./: .gitmodules  Cargo.toml  build.rs  keyvalue.wit  readme.md  results.rs  wasi_snapshot_preview1.wasm
.devcontainer/: devcontainer.json
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
src/: main.rs
wasi_snapshot_preview1/: Cargo.toml  testwasi.wit
wasi_snapshot_preview1/.cargo/: config.toml
