[package]
name = "guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", branch = "main" }

[lib]
crate-type = ["cdylib"]

[workspace]