[package]
name = "host"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main", features = ['component-model', 'default']}
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools", branch = "main" }
anyhow = "1"

[[bin]]
name = "forge"

[[bin]]
name = "main"