[package]
name = "wasi_snapshot_preview1"
version = "0.0.0"
edition = "2021"

[dependencies]
wasi = "0.11.0"
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", branch = "main", default-features = false, features = ["macros"] }

[lib]
crate-type = ["cdylib"]
test = false